--- a/The Math/OnboardingLocationView.xib
+++ b/The Math/OnboardingLocationView.xib
@@ -104,7 +104,7 @@
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.94117647059999998" green="0.97647058819999999" blue="0.98823529409999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="9iG-9i-A84" secondAttribute="trailing" id="3Qy-pQ-DoJ"/>
                 <constraint firstAttribute="centerX" secondItem="9iG-9i-A84" secondAttribute="centerX" id="8ht-Dv-Ks7"/>
