--- a/The Math/OnboardingReflectView.xib
+++ b/The Math/OnboardingReflectView.xib
@@ -16,21 +16,21 @@
                         <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" image="onboarding_03" translatesAutoresizingMaskIntoConstraints="NO" id="J2N-AA-4Ye">
                             <rect key="frame" x="0.0" y="-192" width="320" height="192"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reflect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHJ-7l-VT2">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Reflect" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XHJ-7l-VT2" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="19"/>
                             <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rotate your phone to see how your mood moved over time. Understand where you were, what you did, what the weather was like etc" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Was-AZ-sBc">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Rotate your phone to see how your mood moved over time. Understand where you were, what you did, what the weather was like etc" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Was-AZ-sBc" customClass="CabritoLabel" customModule="HowAmIDoing" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="-21" width="42" height="21"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="280" id="MYG-Lk-hpD">
-                                    <variation key="heightClass=regular-widthClass=compact" constant="304"/>
+                                    <variation key="heightClass=regular-widthClass=compact" constant="281"/>
                                 </constraint>
                             </constraints>
-                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="17"/>
-                            <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                            <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                            <color key="textColor" red="0.37647058820000001" green="0.3921568627" blue="0.39607843139999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                             <variation key="default">
                                 <mask key="constraints">
@@ -53,7 +53,9 @@
                         <constraint firstAttribute="centerX" secondItem="Was-AZ-sBc" secondAttribute="centerX" id="UuE-O9-i0g"/>
                         <constraint firstItem="XHJ-7l-VT2" firstAttribute="top" secondItem="J2N-AA-4Ye" secondAttribute="bottom" constant="12" id="ifO-TG-ARh"/>
                         <constraint firstAttribute="trailing" secondItem="XHJ-7l-VT2" secondAttribute="trailing" constant="8" id="pqf-mP-Nti"/>
-                        <constraint firstAttribute="bottom" secondItem="Was-AZ-sBc" secondAttribute="bottom" id="zCk-4v-sZF"/>
+                        <constraint firstAttribute="bottom" secondItem="Was-AZ-sBc" secondAttribute="bottom" id="zCk-4v-sZF">
+                            <variation key="heightClass=regular-widthClass=compact" constant="-3"/>
+                        </constraint>
                     </constraints>
                     <variation key="default">
                         <mask key="subviews">
@@ -91,7 +93,7 @@
                     </variation>
                 </view>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.94117647058823528" green="0.97647058823529409" blue="0.9882352941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="centerY" secondItem="OkW-4c-9tX" secondAttribute="centerY" id="4bp-84-p8p"/>
                 <constraint firstAttribute="centerX" secondItem="OkW-4c-9tX" secondAttribute="centerX" id="Di7-cI-Iri"/>
